# 2800-202410-DTC02

./: .env.development  .env.example  .env.test  .eslintignore  .eslintrc.json  .gitignore  .lintstagedrc.json  .prettierignore  .prettierrc.json  .sops.yaml  README.md  eslint.config.mjs  firebase.json  firestore.rules  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.js  vercel.json  vite.config.mjs  workspace.toml
.github/workflows/: build.yml  deploy.yml  firebase.yml  functions.yml  lint.yml  preview.yml  test.yml
.husky/: pre-commit
backend/analysis-manager/: function.py  main.py  pyproject.toml
backend/analysis-manager/tests/: test_handler.py
backend/bias-analyzer/: bias.py
backend/common/document-id/: README.md  pyproject.toml
backend/common/document-id/document_id/: __init__.py
backend/common/document-id/tests/: test_generate.py
backend/page-cache/: function.py  main.py  pyproject.toml
bases/veritasai/accuracy_analyzer/: handler.py
bases/veritasai/analysis_manager/: handler.py
bases/veritasai/bias_analyzer/: __init__.py  handler.py
bases/veritasai/fact_check/: handler.py
bases/veritasai/summary/: handler.py
bases/veritasai/summary_analyzer/: handler.py
bases/veritasai/tone_analyzer/: handler.py
components/veritasai/accuracy/: __init__.py  core.py  model.py
components/veritasai/articles/: __init__.py  article.py  dedup.py  storage.py
components/veritasai/authentication/: __init__.py  decorator.py
components/veritasai/bias/: __init__.py  core.py  scores.py  sentences.py
components/veritasai/cache/: __init__.py
components/veritasai/config/: __init__.py  location.py
components/veritasai/cors/: __init__.py  decorator.py  response.py
components/veritasai/document_id/: __init__.py
components/veritasai/fact_check/: fact_check.py
components/veritasai/firebase/: __init__.py  app.py
components/veritasai/input_validation/: __init__.py  error.py  models.py
components/veritasai/logging/: __init__.py
components/veritasai/protocol/: __init__.py  message.py  storage.py
components/veritasai/pubsub/: __init__.py  publisher.py  topics.py
components/veritasai/summarizer/: __init__.py  core.py  model.py
components/veritasai/summary/: summary.py
components/veritasai/tone/: __init__.py  core.py  plutchik.py  summary.py
components/veritasai/watson/: __init__.py  language.py
development/: bias.py  fact_check.py  function.py  populate.py  publish.py  tone.py  update.py
development/testsupport/: __init__.py  config.py
environments/: accuracy-analyzer.yaml  analysis-manager.yaml  bias-analyzer.yaml  summary-analyzer.yaml  tone-analyzer.yaml
frontend/: 404.html  ai-detect.html  analysis.html  author.html  bias.html  dob.html  forgot-password.html  history.html  home.html  index.html  learn.html  login.html  profile.html  publisher.html  saved.html  signup.html  skeleton.html  summary.html  tone.html
frontend/html/: ai-detect.html  ai_detect.html  analysis.html  author.html  bias.html  dob.html  footer-b.html  footer.html  forgot-password.html  header-b.html  header.html  history.html  home.html  index.html  learn.html  login.html  navbar.html  profile.html  publisher.html  saved.html  signup.html  skeleton.html  summary.html  tone.html
frontend/html/templates/: analysis-navigation-template.html  footer-logged-in-template.html  footer-logged-out-template.html  header-template.html  header.html
frontend/images/favicon/: site.webmanifest
frontend/public/: site.webmanifest
frontend/public/templates/: analysis-navigation-template.html  footer-logged-in-template.html  footer-logged-out-template.html  header-template.html
frontend/scripts/: analysis-navigation.js  analysis.js  assign-article.js  authors.js  bias.js  firebase.js  firestore-listener.js  history.js  home.js  learn.js  login.js  nav-bar-logic.js  profile.js  publisher.js  saved.js  signup.js  summary.js  tone.js  user.js
frontend/scripts/authentication/: dob.js  forgot-password.js  login.js  logout.js  reset-password.js  shared.js  signup.js
frontend/scripts/firebase_populate/: firebase_populate_learn_page.html  firebase_populate_learn_page.js
frontend/styles/: output.css  tailwind.css
pages/: home.html  index.html  navbar.html
projects/accuracy-analyzer/: main.py  pyproject.toml
projects/analysis-manager/: main.py  pyproject.toml  requirements.txt
projects/bias-analyzer/: pyproject.toml
projects/summary-analyzer/: main.py  pyproject.toml
projects/tone-analyzer/: main.py  pyproject.toml
src/: output.css
test/: conftest.py  test_fact_check.py
test/bases/veritasai/analysis_manager/: test_validation.py
test/components/veritasai/articles/: test_article.py  test_article_content.py  test_article_from_cloud_event.py  test_article_from_input.py  test_article_to_dict.py  test_generate.py  test_generate_id.py  test_storage.py
test/components/veritasai/authentication/: test_decorator.py
test/components/veritasai/cache/: test_has_article.py
test/components/veritasai/config/: location.py
test/components/veritasai/cors/: test_add_cors_headers.py  test_allowed_origin.py  test_decorator.py
test/components/veritasai/document_id/: test_generate.py
test/components/veritasai/firebase/: test_credentials.py
test/components/veritasai/firebase/testdata/: service_account.json
test/components/veritasai/input_validation/: test_analyze_text.py
test/components/veritasai/protocol/: test_payload.py  test_storage.py
test/components/veritasai/pubsub/: test_publisher.py  test_topics.py
test/components/veritasai/summarizer/: conftest.py  test_model.py  test_summarize.py
test/components/veritasai/watson/: test_language.py
