[build-system]
requires = ["pdm-backend", "pdm-polylith-bricks"]
build-backend = "pdm.backend"

[project]
name = "analysis_manager"
version = "0.1.0"
description = ""
authors = [{ name = "DTC-02" }]

requires-python = ">=3.10"

dependencies = [
  "firebase-admin>=6.5.0",
  "flask>=3.0.3",
  "functions-framework>=3.5.0",
  "pydantic>=2.7.1",
  "python-dotenv>=1.0.1",
  "google-cloud-storage>=2.16.0",
]

[tool.pdm.build]
includes = ["main.py", "requirements.txt"]

[tool.polylith.bricks]
"../../bases/veritasai/analysis_manager" = "veritasai/analysis_manager"
"../../components/veritasai/articles" = "veritasai/articles"
"../../components/veritasai/authentication" = "veritasai/authentication"
"../../components/veritasai/cache" = "veritasai/cache"
"../../components/veritasai/config" = "veritasai/config"
"../../components/veritasai/cors" = "veritasai/cors"
"../../components/veritasai/firebase" = "veritasai/firebase"
"../../components/veritasai/input_validation" = "veritasai/input_validation"
"../../components/veritasai/pubsub" = "veritasai/pubsub"
