[build-system]
requires = ["pdm-backend", "pdm-polylith-bricks"]
build-backend = "pdm.backend"

[project]
name = "tone_analyzer"
version = "0.1.0"
description = ""
authors = [{ name = "DTC-02" }]

requires-python = ">=3.10"

dependencies = [
  "firebase-admin>=6.5.0",
  "functions-framework>=3.5.0",
  "pydantic>=2.7.1",
  "python-dotenv>=1.0.1",
  "google-cloud-storage>=2.16.0",
  "ibm-watson>=8.1.0",
  "ibm-cloud-sdk-core>=3.20.0",
]

[tool.pdm.build]
includes = ["main.py", "requirements.txt"]

[tool.polylith.bricks]
"../../bases/veritasai/tone_analyzer" = "veritasai/tone_analyzer"
"../../components/veritasai/articles" = "veritasai/articles"
"../../components/veritasai/config" = "veritasai/config"
"../../components/veritasai/firebase" = "veritasai/firebase"
"../../components/veritasai/tone" = "veritasai/tone"
"../../components/veritasai/watson" = "veritasai/watson"
